--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -11,6 +11,12 @@
     max-width: 1200px;
     margin: 0 auto;
 }
+
 ul {
     list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
